fixed text align on notation

--- a/src/Components/Notation/Notation.scss
+++ b/src/Components/Notation/Notation.scss
@@ -20,7 +20,6 @@
     }
 
     &__icon {
-        text-align: center;
         font-size: 0.9rem;
 
         &.launcher-separator {
